tests/NormalTests/paczka1/small_fuzzy/38524215.err
Error in line 6: S938 S938 271,1
Error in line 16: S.38 A87 52,1
